add authController, add globalexceptions

--- a/src/Application/Application.Host/appsettings.json
+++ b/src/Application/Application.Host/appsettings.json
@@ -51,5 +51,11 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MyDatabase;Trusted_Connection=True;"
+  },
+  "JwtSettings": {
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience",
+    "SecretKey": "YourSecretKey",
+    "ExpirationInMinutes": 15
   }
 }
