--- a/src/Domain/Domain.UseCase/Domain.UseCase.csproj
+++ b/src/Domain/Domain.UseCase/Domain.UseCase.csproj
@@ -7,6 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Options" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" />
+    </ItemGroup>
+
+    <ItemGroup>
         <ProjectReference Include="..\Domain.Model\Domain.Model.csproj" />
     </ItemGroup>
 
